<resources>
    <string name="app_name">Route Log</string>
    <string name="submit_btn">Submit</string>
    <string name="title_activity_landing">Route Log</string>
    <string-array name="userContextMenu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="hours_training_options">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="number_routes_complete_options">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Route Log</string>
    <string name="nav_header_subtitle">Main Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="set_goals">Set Goals</string>
    <string name="check_goals">Check Goals</string>
    <string name="start_training">Start Training</string>
    <string name="my_map">My Map</string>
    <string name="Communicate">Share</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="boulder_onsight_goal">Boulder Onsight Goal</string>
    <string name="sport_onsight_goal">Sport Onsight Goal</string>
    <string name="boulder_worked_goal">Boulder Worked Goal</string>
    <string name="sport_worked_goal">Sport Worked Goal</string>
    <string name="average_boulder_grade">Average Boulder Grade</string>
    <string name="average_sport_grade">Average Sport Grade</string>
    <string name="number_of_boulder_problems_to_complete">Boulder Problems to Complete</string>
    <string name="number_of_sport_routes_to_complete">Sport Routes to Complete</string>
    <string name="hours_training">Hours Training</string>
    <string name="created_on">Created On</string>
    <string name="expires_on">Expires On</string>
    <string name="set_goal_targets">Set  Targets</string>
    <string name="title_activity_training">Training</string>
    <string name="title_start_session">Start Session</string>
    <string name="title_add_route">Add Route</string>
    <string name="title_end_session">End Session</string>
    <string name="sport">Sport</string>
    <string name="boulder">Boulder</string>
    <string name="style_done">Style Done</string>
    <string name="dogged">Dogged</string>
    <string name="worked">Worked</string>
    <string name="onsight">Onsight</string>
    <string name="grade">Grade</string>
    <string name="add_route">Add New Route To Session</string>
    <string name="no_routes_to_display">%s \nNo Recent Routes to Display</string>
    <string name="no_recent_sessions_to_display">%s \nNo Recent Sessions to Display</string>
    <string name="days_remaining_for_goal">%s Days Remaining</string>
    <string name="goal_expires_today">Goal Expires Today</string>
    <string name="goal_expired_summary">Goal Has Expired. Please Set a new Weekly goal</string>
    <string name="no_routes_completed">No Routes Completed</string>
    <string name="recent_routes">%s \nRecent Routes</string>
    <string name="recent_sessions">Recent Sessions</string>
    <string name="update_annual_goal">UPDATE ANNUAL GOAL</string>
    <string name="update_seasonal_goal">UPDATE SEASONAL GOAL</string>
    <string name="update_weekly_goal">UPDATE WEEKLY GOAL</string>
    <string name="create_annual_goal">CREATE ANNUAL GOAL</string>
    <string name="create_seasonal_goal">CREATE SEASONAL GOAL</string>
    <string name="create_weekly_goal">CREATE WEEKLY GOAL</string>
    <string name="reset_weekly_goal">RESET WEEKLY GOAL</string>
    <string name="reset_seasonal_goal">RESET SEASONAL GOAL</string>
    <string name="reset_annual_goal">RESET ANNUAL GOAL</string>
    <string name="title_activity_main_map">Map</string>
    <string name="title_activity_check_goals">Check Progress</string>
    <string name="title_activity_set_goals">Set Goals</string>
    <string name="channel_name">trainingNotificationActivityChanel</string>
    <string name="channel_description">training activity notification description</string>
    <string name="route_type">Route Type</string>
    <string name="goal_achieved">Goal Achieved</string>
</resources>
