<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_set_goals"
            android:icon="@drawable/ic_action_set_goals"
            android:title="@string/set_goals" />
        <item
            android:id="@+id/nav_check_goals"
            android:icon="@drawable/ic_action_goals"
            android:title="@string/check_goals" />
        <item
            android:id="@+id/nav_start_training"
            android:icon="@drawable/ic_action_plus"
            android:title="@string/start_training" />
        <item
            android:id="@+id/nav_my_map"
            android:icon="@drawable/ic_action_map_icon"
            android:title="@string/my_map" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
