<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Route Type"/>
    <RadioGroup
        android:id="@+id/routeTypeBtnGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boulder"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/style_done"/>
    <RadioGroup
        android:id="@+id/styleDoneBtnGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <RadioButton
            android:id="@+id/styleDoneOnsightRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onsight"/>
        <RadioButton
            android:id="@+id/styleDoneWorkedRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worked"/>
        <RadioButton
            android:id="@+id/styleDoneDoggedRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dogged"/>
    </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade"/>
        <Spinner
            android:id="@+id/gradeAchievedSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>
        <Button
            android:id="@+id/addRouteBtn"
            android:text="@string/add_route"
            android:background="@color/aqua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
</LinearLayout>