<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SetWeeklyGoal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/weeklyTitleTxt"
            android:text="@string/set_goal_targets"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/weeklyNumberOfSportTxt"
            android:text="@string/number_of_sport_routes_to_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/weeklyNumberOfSportSpinner"
            android:entries="@array/number_routes_complete_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/weeklyNumberOfBoulderTxt"
            android:text="@string/number_of_boulder_problems_to_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/weeklyNumberOfBoulderSpinner"
            android:entries="@array/number_routes_complete_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/weeklyAverageSportGradeTxt"
            android:text="@string/average_sport_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/weeklyAverageSportGradeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/weeklyAverageBoulderGradeTxt"
            android:text="@string/average_boulder_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/weeklyAverageBoulderGradeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/weeklyCreatedOnLabel"
            android:text="@string/created_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/weeklyCreatedOnTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/weeklyExpiresOnLabel"
            android:text="@string/expires_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/weeklyExpiresOnTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/resetWeeklyGoalBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Reset Weekly Goal" />
    </LinearLayout>

</FrameLayout>